--- a/login-signup.html
+++ b/login-signup.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicio/Registro - English Academy</title>
+  <link rel="stylesheet" href="css/base.css">
+
   <link rel="stylesheet" href="css/login-singup.css">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 </head>
